# web-cd-service

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  deploy_win_template.sh  deps.bzl  go.mod  go.sum  run_template.sh
bazelwebapi/: BUILD.bazel  config.go  executebazel.go  git.go  healthHandler.go  main.go  middleware.go  prio.go  queue.go  routes.go  server.go  state.go  task.go  taskHandler.go  util.go
